# spooky-git

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  spooky-container.def
libs/: cufft_utils.h
libs/utils/share/HighFive/CMake/: HighFiveConfig.cmake  HighFiveTargets.cmake
problems/: CMakeLists.txt
problems/generic/: CMakeLists.txt  initflow.cu  list_source_files.txt  physics_modules.hpp  spooky.cfg  spooky.hpp  taylor-green-vortex.py  user_defined_cuda_kernels.cu  user_defined_cuda_kernels.hpp  user_outputs.cu  user_outputs.hpp
problems/hbi2d/: create_initial_conditions.py  plot_timevar.py  spooky.cfg
problems/mti3d/: CMakeLists.txt  SPOOKY_job  create_initial_conditions.py  initflow.cu  list_source_files.txt  physics_modules.hpp  plot-mti-eigenmode.py  plot_timevar.ipynb  plot_timevar.py  spooky.cfg  spooky.hpp  user_defined_cuda_kernels.cu  user_defined_cuda_kernels.hpp
src/: CMakeLists.txt  Makefile  check_output.cu  common.hpp  compute_dfield.cu  compute_dt.cu  compute_timestep.hpp.old  cublas_routines.hpp  cuda_kernels.cu  cuda_kernels.hpp  cuda_kernels_generic.cu  cuda_kernels_generic.hpp  cufft_routines.cu  cufft_routines.hpp  define_types.hpp  fields.cu  fields.hpp  hdf5_io.cu  hydro_mhd_advance.cu  initflow.cu  list_source_files.txt  main.cu  output_timevar.cu  parameters.hpp  read_parameters.cu  spooky.cu  spooky_old.cu  spooky_outputs.cu  spooky_outputs.hpp  symmetries.cu  tests.cu  wavevector.cu  wavevector.hpp.old
src/cuda/: cublas_routines.cu  cublas_routines.hpp  cuda_kernels.cu  cuda_kernels.hpp  cuda_kernels_generic.cu  cuda_kernels_generic.hpp  cufft_routines.cu  cufft_routines.hpp
src/fields/: fields.cu  fields.hpp  initflow.cu  symmetries.cu  wavevector.cu
src/generic/: physics_modules.hpp  spooky.cfg  user_defined_cuda_kernels.cu
src/io/: check_output.cu  hdf5_io.cu  hdf5_io.hpp  inputoutput.cu  inputoutput.hpp  output_timevar.cu  parameters.hpp  read_parameters.cu  remap_output.cu  spooky_output_functions.cu  spooky_output_spectrum.cu  spooky_output_timevar.cu  spooky_outputs.cu  spooky_outputs.hpp  unshear_output.cu
src/output/: check_output.cu  hdf5_io.cu  hdf5_io.hpp  output_timevar.cu  spooky_outputs.hpp
src/output.old/: hdf5_io.cu
src/parameters/: parameters.cu  parameters.hpp  read_parameters.cu
src/physics/: advect_temperature.cu  anisotropic_conduction.cu  boussinesq.cu  entropy_stratification.cu  hydro.cu  mhd.cu  physics.cu  physics.hpp  shear_rotation.cu
src/physics/anisotropic_conduction/: anisotropic_conduction.cu
src/physics/boussinesq/: boussinesq.cu
src/physics/entropy_stratification/: entropy_stratification.cu
src/rkl/: rkl.cu  rkl.hpp
src/supervisor/: supervisor.cu  supervisor.hpp  timer.hpp
src/tests/: tests.cu  tests.hpp
src/timestepping/: compute_dfield.cu  compute_dt.cu  hydro_mhd_advance.cu  shearing_remapping.cu  timestepping.cu  timestepping.hpp
src/user/: user_defined_cuda_kernels.cu  user_defined_cuda_kernels.hpp  user_output_functions.cu  user_output_timevar.cu  user_outputs.cu  user_outputs.hpp
tests/: CMakeLists.txt
tests/advected-mhd-vortex/: CMakeLists.txt  check-advected-mhd-vortex.py  check_timevar.py  initflow.cu  list_source_files.txt  physics_modules.hpp  plot-advected-mhd.py  spooky.cfg  spooky.hpp  user_outputs.cu  user_outputs.hpp
tests/alfven-wave/: CMakeLists.txt  check-alfven-wave.py  initflow.cu  list_source_files.txt  physics_modules.hpp  plot-alfven-wave.py  spooky.cfg  spooky.hpp  user_defined_cuda_kernels.cu  user_outputs.cu  user_outputs.hpp
tests/cmake_examples/: CMakeLists_exampletest.txt  CMakeLists_exampletest1.txt
tests/fft-forward-inverse/: CMakeLists.txt  cufft_routines.cu  cufft_routines.hpp  initflow.cu  list_source_files.txt  main.cu  main.hpp  physics_modules.hpp  spooky.cfg  spooky.cu  spooky.hpp  user_defined_cuda_kernels.hpp
tests/heat-diffusion/: CMakeLists.txt  check-heat-diffusion.py  initflow.cu  list_source_files.txt  physics_modules.hpp  plot-heat-diffusion.py  spooky.cfg  spooky.hpp  test_rk3_heatdiff.py  user_outputs.cu  user_outputs.hpp
tests/heat-diffusion-sts/: CMakeLists.txt  README.txt  check-heat-diffusion-sts.py  check-heat-diffusion_old.py  compute_dt.cu  hydro_mhd_advance.cu  initflow.cu  list_source_files.txt  physics_modules.hpp  plot_heat_diffusion.py  rkl.cu  rkl.cu.old  spooky.cfg  spooky.hpp  user_defined_cuda_kernels.hpp  user_outputs.cu
tests/heat-diffusion-sts/rkl1/: spooky.cfg
tests/heat-diffusion-sts/rkl2/: spooky.cfg
tests/heat-diffusion-sts/rkl3/: spooky.cfg
tests/heat-diffusion-sts/sts/: spooky.cfg
tests/mri-eigenmode/: CMakeLists.txt  check-mri-eigenmode.py  initflow.cu  plot-mri-eigenmode.py  spooky.cfg
tests/mti-eigenmode/: CMakeLists.txt  check-mti-eigenmode.py  initflow.cu  list_source_files.txt  mti_disp_rel.py  physics_modules.hpp  plot-mti-eigenmode.py  plot_spectrum.py  plot_timevar.py  spooky.cfg  spooky.hpp  user_defined_cuda_kernels.cu  user_defined_cuda_kernels.hpp  user_outputs.cu
tests/shearing-wave/: CMakeLists.txt  check-shearing-wave.py  initflow.cu  plot-shearing-wave.py  spooky.cfg
tests/taylor-green-vortex/: CMakeLists.txt  check-taylor-green.py  create_initial_conditions.py  initflow.cu  list_source_files.txt  physics_modules.hpp  plot-taylor-green-vortex.py  spooky.cfg  user_outputs.cu
