add_subdirectory(fft-forward-inverse)
add_subdirectory(taylor-green-vortex)
add_subdirectory(heat-diffusion)
add_subdirectory(heat-diffusion-sts)
add_subdirectory(alfven-wave)
add_subdirectory(advected-mhd-vortex)
add_subdirectory(mti-eigenmode)
add_subdirectory(shearing-wave)
add_subdirectory(mri-eigenmode)
